--- a/scss/media/_small.scss
+++ b/scss/media/_small.scss
@@ -141,7 +141,7 @@
 		.promo-img {
 			order: 2;
 			width: 100%;
-			margin: 0;
+			padding-left: 0;
 		}
 
 		.lead-text {
